--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "@types/koa-router": "7.4.4",
+    "class-validator": "0.12.2",
     "koa": "2.13.1",
     "koa-router": "10.0.0",
+    "mysql2": "2.2.5",
     "nodemon": "2.0.12",
     "reflect-metadata": "0.1.13",
     "routing-controllers": "0.9.0",
     "ts-node": "10.1.0",
+    "typedi": "0.10.0",
+    "typeorm": "0.2.36",
+    "typeorm-typedi-extensions": "0.4.1",
     "typescript": "4.3.5"
   }
 }
