--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/koa-router": "7.4.4",
+    "class-transformer": "0.3.1",
     "class-validator": "0.12.2",
     "koa": "2.13.1",
     "koa-router": "10.0.0",
